# Machine-Vision

./: README.md  note.md  requirements.yaml  train.py
Ch1/homework/: CMakeLists.txt  ch1_hw.md
Ch1/homework/include/: k_means.h
Ch1/homework/src/: k_means.cpp  test_k_means.cpp
Train/label/: 0000_0000_0000.yaml  0000_0028_0004.yaml
ch2/: CMakeLists.txt
ch2/SnakeMatlabCode/: ASnakeDemo.m  ASnakeGVFDemo.m  Snake2D.m~  SnakeMoveIteration2D.m~  test_internal_matrix.m  test_internal_matrix.m~  testgvf.m
ch2/include/: display.h  gradient_descent_base.h  gvf.h  snake.h
ch2/src/: display.cpp  gradient_descent_base.cpp  gvf.cpp  snake.cpp  test_gvf.cpp  test_snake.cpp
source/: args.py  data_loader.py  model.py
utils/: VisOneFrame.py  data_pre_utils.py
